[project]
name = "instapaper-bookmark-organizer"
version = "0.1.0"
description = "CLI tool to efficiently organize Instapaper bookmarks with domain-based rule learning"
authors = [
    { name = "MIYAMOTO Ryota" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
]

[project.urls]
Homepage = "https://github.com/pal4de/instapaper-bookmark-organizer"
Repository = "https://github.com/pal4de/instapaper-bookmark-organizer"

[project.scripts]
instapaper-organize = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
